<resources>
    <string name="app_name">K-Bid App</string>
    <string name="menu_user">User Management</string>
    <string name="menu_adminaccount">Admin Account</string>

    <string name="menu_all_users">All users</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_content">Content</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_video">Video</string>
    <string name="menu_devotional">Devotional</string>
    <string name="menu_game">Games</string>


    <string name="default_web_client_id">662917951633-nara1aedi2o2gmac4qe63ecjva3ko12o.apps.googleusercontent.com</string>



    <string name="menu_record">Record</string>
    <string name="menu_feedback">Feedback Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string-array name="roles_array">
        <item>User</item>
        <item>Admin</item>
        <item>SuperAdmin</item>
    </string-array>
    <string-array name="admin_roles_array">
        <item>Teacher</item>
        <item>SuperAdmin</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="delete">Delete</string>
    <string name="shuffle">Shuffle</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_slide_menu">SlideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_side_navigation_admin">SideNavigationAdmin</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- res/values/styles.xml -->
    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
        <!-- Make sure these are NOT forcing the default Material button style -->
        <item name="buttonStyle">@null</item>
    </style>
</resources>