<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.myapplication.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user_admin" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.myapplication.ui.user.AdminFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_administrator_admin" />

    <fragment
        android:id="@+id/nav_content"
        android:name="com.example.myapplication.ui.content.ContentFragment"
        android:label="@string/menu_content"
        tools:layout="@layout/fragment_user_admin" />
    <fragment
        android:id="@+id/nav_record"
        android:name="com.example.myapplication.ui.record.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record_admin" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.myapplication.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback_admin" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings_admin" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.myapplication.ui.logout.LogoutFragment"
        tools:layout="@layout/fragment_logout" />


</navigation>